added new menu pages, started navigation and JS

--- a/CheckoutPage.html
+++ b/CheckoutPage.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <script src = "script.js"></script>
     </head>
+
+    <script src = "script.js"></script>
+
     <body>
         <h1>Checkout</h1>
         <ul>
