--- a/ListofRestaurants.html
+++ b/ListofRestaurants.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <script src = "script.js"></script>
     </head>
     <body>
         <h1>Restaurants</h1>
@@ -15,7 +15,7 @@
                     <li>$$$</li>
                     <li>11:00 am - 11:00 pm</li>
                 </ul>
-                <button type="button">Order Here</button>
+                <button type="button" onclick="navToMenuPage('mexMenu.html')">Order Here</button>
             </li>
             <li>
                 <img src="breres.jpg" alt="">
@@ -26,7 +26,7 @@
                     <li>$$</li>
                     <li>8:00 am - 1:00 pm</li>
                 </ul>
-                <button type="button">Order Here</button>
+                <button type="button" onclick="navToMenuPage('breakfastMenu.html')">Order Here</button>
             </li>
             <li>
                 <img src="banres.jpg" alt="">
@@ -38,7 +38,7 @@
                     <li>12:00 am - 11:59 pm</li>
                 </ul>
             </li>
-            <button type="button">Order Here</button>
+            <button type="button" onclick="navToMenuPage('bananaMenu.html')">Order Here</button>
         </ul>
     </body>
 </html>
