--- a/WelcomePage.html
+++ b/WelcomePage.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html land = "en-US">
 <head>
-<title>Welcome Page
-</title>
+<title>Welcome Page</title>
+<script src = "script.js"></script>
 </head>
 
 <style>
@@ -10,6 +10,8 @@
         text-align: center;
     }
 </style>
+
+
 
 <body>
     <div class="welcomePageContents">
@@ -71,7 +73,7 @@
         <div>
             <input type="text" name="textSearch" placeholder="Search by eatery name or key words..." size=70>
             <br><br>
-            <button type="button" style="width: 15%;">Search</button>
+            <button type="button" style="width: 15%;" onclick="navToListofRestaurants()">Search</button>
         </div>
     </div>
 </body>
