--- a/OrderPage.html
+++ b/OrderPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <script src = "script.js"></script>
     </head>
     <body>
         <h1>My Order</h1>
