added css links in html files, further updated css

--- a/RestoList.html
+++ b/RestoList.html
@@ -2,17 +2,25 @@
 <html>
     <head>
         <title>Restaurant Search</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
+    <style>
+        body{
+            background-image: url("welcomeBG.jpg");
+        }
+    </style>
 
 
     <body onload="populateRestos()">
 
-        <h1>Restaurants</h1>
+        <div id="mainStuff">
+            <h1>Restaurants</h1>
 
-        <div id="searchedRestos"></div>
+            <div id="searchedRestos"></div>
+    
+            <script src = "script.js"></script>
+        </div>
 
-        <script src = "script.js"></script>
-        
     </body>
 
 </html>
