--- a/CheckoutPage.html
+++ b/CheckoutPage.html
@@ -2,41 +2,49 @@
 <html>
     <head>
         <script src = "script.js"></script>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-
+    <style>
+        body{
+            background-image: url("checkoutBG.jpg");
+        }
+    </style>
     <script src = "script.js"></script>
 
     <body>
-        <h1>Checkout</h1>
-        <ul>
-            <li>Banana on a Stick x 2</li>
-            <li>Banana on a Stick with Chocolate x 3</li>
-            <li>Banana on a Stick with Chocolate and Nuts x 2</li>
-            <li><h4>Total = $42.00</h4></li>
-            <li><h4>HST = $5.46</h4></li>
-        </ul>
-        <h2>Grand Total = $47.46</h2>
-        <h2>Payment Details:</h2>
-        <input type="radio" name="gender" value="Debit"> Debit Card
-        <input type="radio" name="gender" value="Credit"> Credit Card
-        <input type="radio" name="gender" value="COD"> Cash
-        <br>
-        <br>
-        <label for="cardHolder">Card Holder's Name:</label>
-        <br>
-        <input type="text" name="cardHolder">
-        <br>
-        <label for="cardNumber">Card Number:</label>
-        <br>
-        <input type="text" name="cardNumber">
-        <br>
-        <label for="cardExpiration">Card Expiration Date:</label>
-        <br>
-        <input type="text" name="cardExpiration">
-        <h2>Enter your Delivery Information: </h2>
-        Name: <input type="text" name="name"><br><br>
-        Address: <input type="text" name="address">
-        Postal Code: <input type="text" name="pcode"><br><br>
-        <button type="button">Confirm Order</button>
+        <div id="mainStuff">
+            <h1>Checkout</h1>
+            <h2>Your Order</h2>
+            <ul>
+                <li>Banana on a Stick x 2</li>
+                <li>Banana on a Stick with Chocolate x 3</li>
+                <li>Banana on a Stick with Chocolate and Nuts x 2</li>
+                <li><h4>Total = $42.00</h4></li>
+                <li><h4>HST = $5.46</h4></li>
+            </ul>
+            <h3>Grand Total = $47.46</h3>
+            <h2>Payment Details:</h2>
+            <input type="radio" name="gender" value="Debit"> Debit Card
+            <input type="radio" name="gender" value="Credit"> Credit Card
+            <input type="radio" name="gender" value="COD"> Cash
+            <br>
+            <br>
+            <label for="cardHolder">Card Holder's Name:</label>
+            <br>
+            <input type="text" name="cardHolder">
+            <br>
+            <label for="cardNumber">Card Number:</label>
+            <br>
+            <input type="text" name="cardNumber">
+            <br>
+            <label for="cardExpiration">Card Expiration Date:</label>
+            <br>
+            <input type="text" name="cardExpiration">
+            <h2>Enter your Delivery Information: </h2>
+            Name: <input type="text" name="name"><br><br>
+            Address: <input type="text" name="address">
+            Postal Code: <input type="text" name="pcode"><br><br>
+            <button type="button" class="button">Confirm Order</button>
+        </div>
     </body>
 </html>
