--- a/WelcomePage.html
+++ b/WelcomePage.html
@@ -3,18 +3,22 @@
 <head>
 <title>Welcome Page</title>
 <script src = "script.js"></script>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <style>
     .welcomePageContents {
         text-align: center;
     }
+    body{
+        background-image: url("welcomeBG.jpg");
+    }
 </style>
 
 
 
 <body>
-    <div class="welcomePageContents">
+    <div class="welcomePageContents" id="mainStuff">
         <h1>
             <img src="uottawaLogo.png">
             <br>
@@ -48,7 +52,7 @@
 
         <br><br>
 
-        <div style="border-style: solid; width: 475px; margin: 0 auto;">
+        <div>
             <input type="radio" value="breakfast" id="breakfast" name="mealType">
             <label for="breakfast">Breakfast</label>
 
@@ -73,7 +77,7 @@
         <div>
             <input type="text" name="textSearch" placeholder="Search by eatery name or key words..." size=70>
             <br><br>
-            <button type="button" style="width: 15%;" onclick="navToListofRestaurants()">Search</button>
+            <button type="button" class="button" style="width: 15%;" onclick="navToListofRestaurants()">Search</button>
         </div>
     </div>
 </body>
