forgot to add BG image to this page my b

--- a/RestoMenu.html
+++ b/RestoMenu.html
@@ -9,6 +9,9 @@
         .menu {
             text-align: center;
         }
+        body{
+            background-image: url("orderBG.jpg");
+        }
     </style>
     <body class="menu" onload="populateMenu()">
         <div id="mainStuff">
