added checkout validation stuff

--- a/CheckoutPage.html
+++ b/CheckoutPage.html
@@ -41,10 +41,10 @@
             <br>
             <input type="text" name="cardExpiration">
             <h2>Enter your Delivery Information: </h2>
-            Name: <input type="text" name="name"><br><br>
-            Address: <input type="text" name="address">
-            Postal Code: <input type="text" name="pcode"><br><br>
-            <button type="button" class="button">Confirm Order</button>
+            Name: <input type="text" id="name"><br><br>
+            Address: <input type="text" id="address">
+            Postal Code: <input type="text" id="pcode"><br><br>
+            <button type="button" class="button" onclick=checkFields()>Confirm Order</button>
         </div>
     </body>
 </html>
