added btn to return to menu from order

--- a/OrderPage.html
+++ b/OrderPage.html
@@ -9,6 +9,7 @@
         </ul>
         <h2 id="total"></h2>
         <button type="button" onclick = "navToCheckoutPage()">Checkout</button>
+        <button type="button" onclick = "backToMenuPage()">Return To Menu</button>
         <script src = "script.js"></script>
     </body>
 </html>
