--- a/CheckoutPage.html
+++ b/CheckoutPage.html
@@ -11,18 +11,13 @@
     </style>
     <script src = "script.js"></script>
 
-    <body>
+    <body onload = populateOrderInfoCheckout()>
         <div id="mainStuff">
             <h1>Checkout</h1>
             <h2>Your Order</h2>
-            <ul>
-                <li>Banana on a Stick x 2</li>
-                <li>Banana on a Stick with Chocolate x 3</li>
-                <li>Banana on a Stick with Chocolate and Nuts x 2</li>
-                <li><h4>Total = $42.00</h4></li>
-                <li><h4>HST = $5.46</h4></li>
+            <ul id = orderDetails>
             </ul>
-            <h3>Grand Total = $47.46</h3>
+            <h3 id = grandTotal></h3>
             <h2>Payment Details:</h2>
             <input type="radio" name="gender" value="Debit"> Debit Card
             <input type="radio" name="gender" value="Credit"> Credit Card
